# erpl-web

./: .clang-tidy  .cursorignore  .cursorrules  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  README_Odp_Odata.md  compile_commands.json  create_secret.sql  extension_config.cmake  vcpkg.json
.ai/: datasphere-catalog.edmx  datasphere-catalog.json  datasphere-certificate-management.json  datasphere-connection-management.json  datasphere-consumption.edmx  datasphere-consumption.json  datasphere-env.md  datasphere-info.md  datasphere-plan.md  datasphere-sharing-cockpit.json  development-workflow.md  duckdb-teradata.llm.md  gsheets.llm.md  odata-v2-info.md  odata-v2-plan.md  odp-env.md  odp-info.md  odp-plan copy.md  odp-plan.md
.ai/cli/: package-lock.json  package.json
.ai/theo/Theobald.Extractors.Odata/: AssemblyInfo.cs  EdmType.cs  LookUp.cs  ODataExtractionDefinition.cs  ODataExtractionSettings.cs  ODataExtractor.cs  ODataResultTable.cs  ODataResultTableV2.cs  ODataResultTableV4.cs  OdataConnectionDefinition.cs  OdataParameterization.cs  ResponseFormat.cs  Service.cs  ServiceFactory.cs  ServiceField.cs  ServiceJsonReader.cs  ServiceJsonReaderV2.cs  ServiceJsonReaderV4.cs  ServiceRequests.cs  ServiceRequestsV2.cs  ServiceRequestsV4.cs  ServiceXmlReader.cs  ServiceXmlReaderV2.cs  ServiceXmlReaderV4.cs  Theobald.Extractors.Odata.csproj  Theobald.Extractors.Odata.sln
.beads/: issues.jsonl
.beads/export-state/: f4c10f60c87c54f5.json
.github/workflows/: MainDistributionPipeline.yml  _extension_build.yml  _extension_deploy.yml  _extension_smoke_test.yml
docs/: CODE_QUALITY_REFACTORING.md
examples/: erpl_web_http_python.ipynb
scripts/: acquire_graph_token.sh  activate_icf_services.abap  smoke_test.py
src/: business_central_catalog.cpp  business_central_client.cpp  business_central_functions.cpp  business_central_secret.cpp  business_central_storage.cpp  charset_converter.cpp  datasphere_catalog.cpp  datasphere_client.cpp  datasphere_local_server.cpp  datasphere_read.cpp  datasphere_secret.cpp  datasphere_types.cpp  dataverse_client.cpp  dataverse_functions.cpp  dataverse_secret.cpp  delta_share_catalog.cpp  delta_share_client.cpp  delta_share_scan.cpp  delta_share_storage.cpp  duckdb_argument_helper.cpp  erpl_datasphere_asset.cpp  erpl_datasphere_browser.cpp  erpl_datasphere_catalog.cpp  erpl_datasphere_client.cpp  erpl_datasphere_local_server.cpp  erpl_datasphere_pushdown.cpp  erpl_datasphere_read.cpp  erpl_datasphere_secret.cpp  erpl_datasphere_types.cpp  erpl_http_client.cpp  erpl_oauth2_callback_handler.cpp  erpl_oauth2_flow_v2.cpp  erpl_oauth2_server.cpp  erpl_oauth2_types.cpp  erpl_odata_attach_functions.cpp  erpl_odata_catalog.cpp  erpl_odata_client.cpp  erpl_odata_content.cpp  erpl_odata_edm.cpp  erpl_odata_expand_parser.cpp  (+80 more)
src/include/: business_central_catalog.hpp  business_central_client.hpp  business_central_functions.hpp  business_central_secret.hpp  business_central_storage.hpp  charset_converter.hpp  datasphere_catalog.hpp  datasphere_client.hpp  datasphere_local_server.hpp  datasphere_read.hpp  datasphere_secret.hpp  dataverse_client.hpp  dataverse_functions.hpp  dataverse_secret.hpp  delta_share_catalog.hpp  delta_share_client.hpp  delta_share_scan.hpp  delta_share_storage.hpp  delta_share_types.hpp  duckdb_argument_helper.hpp  erpl_datasphere_asset.hpp  erpl_datasphere_browser.hpp  erpl_datasphere_catalog.hpp  erpl_datasphere_client.hpp  erpl_datasphere_pushdown.hpp  erpl_datasphere_read.hpp  erpl_datasphere_secret.hpp  erpl_datasphere_types.hpp  erpl_http_client.hpp  erpl_oauth2_callback_handler.hpp  erpl_oauth2_flow_v2.hpp  erpl_oauth2_server.hpp  erpl_oauth2_types.hpp  erpl_odata_attach_functions.hpp  erpl_odata_catalog.hpp  erpl_odata_client.hpp  erpl_odata_content.hpp  erpl_odata_edm.hpp  erpl_odata_expand_parser.hpp  erpl_odata_functions.hpp  (+78 more)
test/cpp/: CMakeLists.txt  edm_msgraph.xml  edm_northwind.xml  edm_northwind_v2.xml  edm_sap_gsample_basic.xml  edm_sap_odp_bw_fact.xml  edm_sap_ui_travel_d_d.xml  edm_trippin.xml  edm_trippin_restier.xml  erpl_web_extension_loader.cpp  test_business_central.cpp  test_charset_converter.cpp  test_datasphere_asset_consumption.cpp  test_datasphere_discovery.cpp  test_datasphere_integration.cpp  test_datasphere_oauth2_consolidated.cpp  test_datasphere_pushdown.cpp  test_dataverse.cpp  test_graph_client.cpp  test_graph_entra.cpp  test_graph_excel.cpp  test_graph_outlook.cpp  test_graph_planner.cpp  test_graph_sharepoint.cpp  test_graph_teams.cpp  test_http_client.cpp  test_main.cpp  test_microsoft_entra_auth.cpp  test_odata_behavior.cpp  test_odata_client.cpp  test_odata_content.cpp  test_odata_edm.cpp  test_odata_edm_builder.cpp  test_odata_expand_parser.cpp  test_odata_from_entity_set_buffering.cpp  test_odata_predicate_pushdown_expand.cpp  test_odata_read_expand.cpp  test_odata_row_buffer.cpp  test_odata_url_helpers.cpp  test_odata_version_detection.cpp  (+7 more)
test/disabled/: erpl_odata_attach.test
test/sql/: business_central.test  business_central_integration.test  datasphere.test  dataverse.test  delta_share.test  delta_share_databricks.test  delta_share_parallel.test  delta_share_remote_profiles.test  erpl_odata_attach.test  erpl_odata_read.test  erpl_odata_sap_attach.test  erpl_odata_sap_read_secret.test  erpl_odata_sap_storage.test  erpl_odata_storage.test  erpl_odata_storage_scan.test  erpl_odata_v2.test  erpl_odata_v2_advanced.test  erpl_odata_v2_features.test  erpl_odata_v2_performance.test  erpl_odata_v2_realworld.test  erpl_odata_v4_regression.test  erpl_web_core.test  erpl_web_datasphere.disabled_test  erpl_web_datasphere.test  erpl_web_http.test  erpl_web_http_secret.test  erpl_web_odata.test  erpl_web_odata_describe.test  erpl_web_odata_expand.test  erpl_web_odata_service_root.test  erpl_web_odata_v2.test  erpl_web_odata_v4.test  erpl_web_sap_odata_show.disabled_test  erpl_web_sap_odata_show.test  erpl_web_secrets.test  erpl_web_tracing.test  erpl_web_tracing_basic.test  erpl_web_tracing_file.test  graph_entra.test  graph_entra_integration.test  (+37 more)
(+106 files in other folders)
